--- a/client/public/index.html
+++ b/client/public/index.html
@@ -28,6 +28,13 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  </link>
+  <div class="icon-bar">
+    <a href="https://twitter.com/ArjunPraveen17" target="_blank" class="twitter"><i class="fa fa-twitter"></i></a>
+    <a href="https://github.com/ArjunPraveen"  target="_blank" class="github"><i class="fa fa-github"></i></a>
+    
+  </div>
     <div id="root"></div>
     <!--
       This HTML file is a template.
