--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,9 +5,10 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="google-site-verification" content="NmfHMH9-rW_TNgLWM3XCof147quvla9UYPDMofoKnUw" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="A tool to generate random songs!"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
